--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@
       transform: translateY(0);
       box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
     }
+		     .discord-button {
+      display: inline-block;
+      background-color: #5865F2;
+      color: white;
+      padding: 12px 24px;
+      font-size: 16px;
+      font-weight: bold;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      font-family: Arial, sans-serif;
+    }
+
+    .discord-button:hover {
+      background-color: #4752C4;
+    }
   </style>
 
 	<script data-cfasync="false">
@@ -1184,6 +1201,9 @@
 			
                     </div>
                 </div>
+			 <a href="https://discord.com/invite/uGaX6kWA7u" class="discord-button" target="_blank">
+    Join Our Discord
+  </a>
             </div>
 
  
