--- a/index.html
+++ b/index.html
@@ -172,7 +172,10 @@
 	    <li class="nav-item">
             <a href="game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
         </li>
-	    </li>  
+	    <li class="nav-item">
+            <a href="https://discord.com/invite/uGaX6kWA7u" class="nav-link">Discord</a>
+        </li>
+	      
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">More</a>
