--- a/index.html
+++ b/index.html
@@ -166,20 +166,18 @@
         <li class="nav-item">
             <a href="bike/index.html" class="nav-link">Bike</a>
         </li>        
-        <li class="nav-item">
-            <a href="car/index.html" class="nav-link">Car</a>
-        </li>  
 	    <li class="nav-item">
             <a href="game/1v1-lol.html" class="nav-link">1v1.lol Unblocked</a>
         </li>
 	    <li class="nav-item">
-            <a href="https://discord.com/invite/uGaX6kWA7u" class="nav-link">Discord</a>
+            <a href="https://discord.com/invite/uGaX6kWA7u" class="discord-button" target="_blank">Discord</a>
         </li>
 	      
         <!-- More Dropdown -->
         <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">More</a>
             <ul class="dropdown-menu">
+		<li><a class="dropdown-item" href="car/index.html">Car</a></li>
                 <li><a class="dropdown-item" href="idle/index.html">Idle</a></li>
                 <li><a class="dropdown-item" href="shooting/index.html">Shooting</a></li>
                 <li><a class="dropdown-item" href="skill/index.html">Skill</a></li>
@@ -1204,9 +1202,7 @@
 			
                     </div>
                 </div>
-			 <a href="https://discord.com/invite/uGaX6kWA7u" class="discord-button" target="_blank">
-    Join Our Discord
-  </a>
+			 
             </div>
 
  
