--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@
                                 <li><a href="#" data-filter="*" class="current">show all</a></li>
                                 <li><a href="#" data-filter=".desktop">Desktop</a></li>
                                 <li><a href="#" data-filter=".mobile">mobile</a></li>
+			        <li><a href="https://discord.com/invite/uGaX6kWA7u" class="discord-button" target="_blank">Join Our Discord</a></li>
                             </ul>
                         </div>
 
