--- a/index.html
+++ b/index.html
@@ -106,7 +106,6 @@
     }
 		     .discord-button {
       display: inline-block;
-      background-color: #5865F2;
       color: white;
       padding: 12px 24px;
       font-size: 16px;
@@ -119,7 +118,6 @@
     }
 
     .discord-button:hover {
-      background-color: #4752C4;
     }
   </style>
 
@@ -261,10 +259,10 @@
                     <div class="games-masonary">
                         <div class="projectFilter project-btn">
                             <ul>
-                                <li><a href="#" data-filter="*" class="current">show all</a></li>
+                                <li><a href="https://discord.com/invite/uGaX6kWA7u" data-filter="*" class="current">Join Our Discord</a></li>
                                 <li><a href="#" data-filter=".desktop">Desktop</a></li>
                                 <li><a href="#" data-filter=".mobile">mobile</a></li>
-			        <li><a href="https://discord.com/invite/uGaX6kWA7u" class="discord-button" target="_blank">Join Our Discord</a></li>
+			        <li><a href="#" data-filter=".desktop">Show All</a></li>
                             </ul>
                         </div>
 
