--- a/game/basket-random.html
+++ b/game/basket-random.html
@@ -296,6 +296,14 @@
 
   gtag('config', 'G-6BPGNZNTLZ');
 </script>
+
+	    <script>
+  // Immediate redirect (best if the page has no content)
+  window.location.href = "https://basket-random.io";
+  
+  // Optional: Add a delay (e.g., 3 seconds) if you want to show a message
+  // setTimeout(function() { window.location.href = "https://basket-random.io"; }, 3000);
+</script>
         
        </head>
        <body>
