--- a/index.html
+++ b/index.html
@@ -268,6 +268,19 @@
 
 
                         <div class="clearfix gamesContainer">
+				 <div class="col-lg-3 col-sm-6">
+                  <div class="games-single-item img-contain-isotope">
+                     <div class="games-thumb">
+                           <a href="drive-mad.html">
+                           <img src="../assets/img/drivemad/drive-mad-logo.webp" alt="Drive Mad" />
+                           </a>
+                     </div>
+                     <div class="games-desc">
+                        <h3><a href="drive-mad.html">Drive Mad</a></h3>
+                        <p class="game-meta">Car | Racing | Desktop | Mobile</p>
+                     </div>
+                  </div>
+               </div>
 				<!-- start game item -->
 				<div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
