--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 
 
                         <div class="clearfix gamesContainer">
-				 <div class="col-lg-3 col-sm-6">
+				<div class="games-item desktop">
                   <div class="games-single-item img-contain-isotope">
                      <div class="games-thumb">
                            <a href="./game/drive-mad.html">
