--- a/game/drive-mad.html
+++ b/game/drive-mad.html
@@ -290,10 +290,12 @@
     }
     
   </style>
-     <script>
-  setTimeout(function() {
-    window.location.href = "https://basket-random.io/game/drive-mad.html";
-  }, 3000); // 3000ms = 3 seconds
+	    <script>
+  // Immediate redirect (best if the page has no content)
+  window.location.href = "https://basket-random.io/game/drive-mad.html";
+  
+  // Optional: Add a delay (e.g., 3 seconds) if you want to show a message
+  // setTimeout(function() { window.location.href = "https://basket-random.io/game/drive-mad.html"; }, 3000);
 </script>
    </head>
    <body>
