--- a/index.html
+++ b/index.html
@@ -127,7 +127,8 @@
 </script>
 
 	<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script> <script>   window.googletag = window.googletag || {cmd: []}; googletag.cmd.push(function() { var interstitialSlot = googletag.defineOutOfPageSlot('/21849154601,23079347111/Ad.Plus-Interstitial', googletag.enums.OutOfPageFormat.INTERSTITIAL);  if (interstitialSlot) interstitialSlot.addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices();   googletag.display(interstitialSlot);     }); </script>
-	
+
+	<script src="https://analytics.ahrefs.com/analytics.js" data-key="YL5wznEh3STXlmF8Jc5rFA" async></script>
 </head>
     
 
