--- a/shooting/index.html
+++ b/shooting/index.html
@@ -174,12 +174,12 @@ Shooting games, a popular video game genre, offer players the thrill of virtual 
                                      <div class="games-item desktop">
         <div class="games-single-item img-contain-isotope">
             <div class="games-thumb">
-                <a href="./game/deadshot-io.html">
+                <a href="/game/deadshot-io.html">
                     <img src="assets/img/deadshot-io/deadshot-io.webp" alt="Deadshot.io" title="Deadshot.io" />
                 </a>
             </div>
             <div class="games-desc">
-                <h2><a href="./game/deadshot-io.html">Deadshot.io</a></h2>
+                <h2><a href="/game/deadshot-io.html">Deadshot.io</a></h2>
                 <p class="game-meta">Shooting | Desktop</p>
             </div>
         </div>
