--- a/io-games/index.html
+++ b/io-games/index.html
@@ -180,12 +180,12 @@ If you want to play io games online for free, without signing up or downloading 
                                      <div class="games-item desktop">
         <div class="games-single-item img-contain-isotope">
             <div class="games-thumb">
-                <a href="./game/deadshot-io.html">
+                <a href="/game/deadshot-io.html">
                     <img src="https://faf-games.github.io/assets/img/deadshot-io/deadshot-io.webp" alt="Deadshot.io" title="Deadshot.io" />
                 </a>
             </div>
             <div class="games-desc">
-                <h2><a href="./game/deadshot-io.html">Deadshot.io</a></h2>
+                <h2><a href="/game/deadshot-io.html">Deadshot.io</a></h2>
                 <p class="game-meta">Shooting | Desktop</p>
             </div>
         </div>
