--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,6 @@
         <li><a href="https://faf-games.github.io/game/shell-shockers.html" target="_blank">Shell Shockers</a> – A unique egg-themed shooter where you battle other eggs with powerful weapons.</li><br>
         <li><a href="https://faf-games.github.io/game/bitlife.html" target="_blank">BitLife</a> – A life simulation game where you make key choices that shape your character's journey through various life events, from childhood to adulthood, all in a detailed text-based world.</li><br>
         <li><a href="https://faf-games.github.io/game/basketball-stars.html" target="_blank">Basketball Stars</a> – Show off your basketball skills in this fun sports game that lets you play with friends.</li><br>
-        <li><a href="https://faf-games.github.io/game/blumgi-rocket.html" target="_blank">Blumgi Rocket</a> – A fun and explosive physics-based game where you launch your character with precision through challenging, action-packed levels filled with stunts and obstacles.</li><br>
         <li><a href="https://faf-games.github.io/game/slope.html" target="_blank">Slope</a> – Control a ball as it speeds down a treacherous slope, dodging obstacles and trying not to fall off.</li><br>
         <li><a href="https://faf-games.github.io/game/moto-x3m-bike-race.html" target="_blank">Moto X3M</a> – Race your bike through crazy obstacle courses, performing stunts and tricks as you go.</li><br>
         <li><a href="https://faf-games.github.io/game/among-us.html" target="_blank">Among Us Online</a> – Play the popular social deduction game where you try to figure out who the imposter is among your crew.</li><br>
@@ -1245,7 +1244,7 @@
                                         <ul>
                                             <li><a href="/game/drift-hunters.html"><span class="fa fa-caret-right"></span>Drift Hunters</a></li>
                                             <li><a href="/game/drift-boss.html"><span class="fa fa-caret-right"></span>Drift Boss</a></li>
-                                            <li><a href="/game/blumgi-rocket.html"><span class="fa fa-caret-right"></span>Blumgi rocket</a></li>
+                                            <li><a href="/game/block-blast.html"><span class="fa fa-caret-right"></span>Block Blast</a></li>
                                             <li><a href="/game/1v1-lol.html"><span class="fa fa-caret-right"></span>1V1.lol Unblocked</a></li>
                                             <li><a href="/game/eggy-car.html"><span class="fa fa-caret-right"></span>Eggy Car</a></li>
                                         </ul>
