--- a/io-games/index.html
+++ b/io-games/index.html
@@ -154,7 +154,7 @@ The name “.io” comes from the website address, but now it just means fun and
 
 You can find the best io games for action, strategy, shooting, or even sports. They're simple to play, but once you start, it’s hard to stop!
 
-If you want to play io games online for free, without signing up or downloading anything, .io games are perfect for you. </p>
+If you want to play io games online for free, without signing up or downloading anything, github.io games are perfect for you. </p>
                     </div>
                 </div>
             </div>
