--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,9 @@
     <p>
         We’re always adding new games and features to make sure your experience with FAF Games keeps getting better. Stay in the loop by subscribing to our newsletter or following us on social media. That way, you’ll never miss out on our latest updates and releases.
     </p>
-		
+		</div>
+	    </div>
+	</div>
 
 
     <!-- Games Area End -->
