--- a/game/drive-mad.html
+++ b/game/drive-mad.html
@@ -19,7 +19,7 @@
       drive mad 2
       drive mad 2 poki">
       <meta name="author" content="FAF Games">
-      <link rel="canonical" href="index.html">
+      <link rel="canonical" href="/game/drive-mad.html">
       <!-- Title -->
       <title>Drive Mad Unblocked | FAF Games</title>
       <!-- Favicon -->
