--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Title -->
     <title>Play Unblocked Games | Unblocked Games Premium</title>
 	<meta name="publisher" content="FAF Games Team">
-	<link rel="canonical" href="https://faf-games.github.io/index.html">
+	<link rel="canonical" href="https://faf-games.github.io/">
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
