--- a/game/ovo.html
+++ b/game/ovo.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>OvO Unblocked: Play Now for Free on FAF Games</title>
-        <meta name="description" content="Play OvO, the fast-paced platformer game! Jump, slide, and overcome challenging levels with precision and speed. Master your skills and beat the clock in this exciting adventure.">
+        <meta name="description" content="Play OvO Unblocked, the fast-paced platformer game! Jump, slide, and overcome challenging levels with precision and speed. Master your skills and beat the clock in this exciting adventure.">
 	<meta name="keywords" content="OvO, OvO game, play OvO, OvO online, OvO unblocked, OvO tips, OvO guide, OvO cheats, OvO walkthrough, OvO platformer, OvO speedrun">
 
         <meta name="news_keywords" content="ovo 3
@@ -754,11 +754,11 @@
 
 
     <h2>OVO Unblocked: Enjoy the Classic Platformer Anytime, Anywhere</h2>&nbsp;
-    <p>Are you fan of fast-paced platformer games, then OVO Classic is the perfect game for you. With its sleek design, smooth mechanics, and challenging levels, this game has captured the hearts of players everywhere. But what if you want to play it at school or work, where gaming websites are often restricted? That’s where OVO Unblocked comes in. Let’s dive into why this version of the game is so popular and how you can access it.</p>
+    <p>Are you a fan of fast-paced platformer games? The <strong><a href="https://ovo-classic.github.io/">OvO Game</a></strong> is the perfect game for you. With its sleek design, smooth mechanics, and challenging levels, this game has captured the hearts of players everywhere. But what if you want to play it at school or work, where gaming websites are often restricted? That’s where OVO Unblocked comes in. Let’s dive into why this version of the game is so popular and how you can access it.</p>
 
-    <h2>What is OVO Classic?</h2>&nbsp;
-    <p>OVO Classic is a minimalist platformer game where the main objective is to guide a small, nimble character through tricky, obstacle-filled levels. The gameplay is focused on speed and precision, requiring players to make quick decisions and perfectly timed jumps. The simple controls—just jumping and moving—make it easy to pick up, but the increasingly difficult levels ensure that even seasoned gamers will find a challenge.</p>
-    <p>The sleek, clean design of the game keeps distractions to a minimum, allowing players to focus entirely on navigating the complex mazes and avoiding traps. It’s a game that’s easy to learn but tough to master, which is why so many players come back for more.</p>
+    <h2>What is OVO Unblocked?</h2>&nbsp;
+    <p>OVO Unblocked is a minimalist platformer game where the main objective is to guide a small, nimble character through tricky, obstacle-filled levels. The gameplay is focused on speed and precision, requiring players to make quick decisions and perfectly timed jumps. The simple controls—just jumping and moving—make it easy to pick up, but the increasingly difficult levels ensure that even seasoned gamers will find a challenge.</p>
+    <p>The sleek, clean design of the game keeps distractions to a minimum, allowing players to focus entirely on navigating the complex mazes and avoiding traps. It is a game that is easy to learn but tough to master, which is why so many players come back for more.</p>
 
     <h2>Why Play OVO Unblocked?</h2>&nbsp;
     <p>Playing OVO Unblocked allows you to enjoy this exciting platform without being blocked by school or workplace restrictions. Many schools and offices have firewalls that prevent access to regular gaming websites, but unblocked versions allow you to play OVO Classic anywhere, anytime.</p>
@@ -788,7 +788,7 @@
     <h2>Why OVO Unblocked is Perfect for School and Work</h2>&nbsp;
     <p>OVO Unblocked isn’t just fun—it’s also perfect for quick gaming sessions during your free time at school or work. Here’s why:</p>
     <ul>
-        <li><strong>Quick Gameplay:</strong> Most levels in <a href="https://ovo-classic.github.io/">OvO Unblocked</a> can be completed in just a few minutes, making it ideal for short breaks.</li>&nbsp;
+        <li><strong>Quick Gameplay:</strong> Most levels in OvO Unblocked can be completed in just a few minutes, making it ideal for short breaks.</li>&nbsp;
         <li><strong>No Distractions:</strong> The game’s minimalist style and focus on precision make it easy to play without getting too absorbed. You can quickly start and stop without feeling like you’re missing out.</li>&nbsp;
         <li><strong>Accessible on Multiple Devices:</strong> Whether you're on a school computer or using a work laptop, OVO Unblocked works seamlessly in any browser.</li>
     </ul>
