--- a/game/ovo.html
+++ b/game/ovo.html
@@ -764,7 +764,7 @@
     <p>Playing OVO Unblocked allows you to enjoy this exciting platform without being blocked by school or workplace restrictions. Many schools and offices have firewalls that prevent access to regular gaming websites, but unblocked versions allow you to play OVO Classic anywhere, anytime.</p>
     <p>Here’s why you should give OVO Unblocked a try:</p>
     <ul>
-        <li><strong>Play Anywhere:</strong> Whether you are at school, work, or on the go, you can access the <a href="https://faf-games.github.io" target="_blank">unblocked games</a> of OVO game and play without restrictions.</li>&nbsp;
+        <li><strong>Play Anywhere:</strong> "Whether you are at school, work, or on the go, you can access the <strong><a href="https://ovo-classic.github.io/">OvO Game</a></strong> and play without restrictions."</li>&nbsp;
         <li><strong>Challenging Gameplay:</strong> The simple but engaging mechanics make it a perfect game for short breaks or longer sessions. Whether you're looking to kill some time or test your skills, OVO is up to the task.</li>&nbsp;
         <li><strong>No Downloads Required:</strong> OVO Unblocked runs directly in your browser, so there's no need to download or install anything. This makes it super convenient for players on shared or public devices.</li>
     </ul>
