--- a/game/ovo.html
+++ b/game/ovo.html
@@ -754,7 +754,7 @@
 
 
     <h2>OVO Unblocked: Enjoy the Classic Platformer Anytime, Anywhere</h2>&nbsp;
-    <p>Are you a fan of fast-paced platformer games? The <strong><a href="https://ovo-classic.github.io/">OvO Game</a></strong> is the perfect game for you. With its sleek design, smooth mechanics, and challenging levels, this game has captured the hearts of players everywhere. But what if you want to play it at school or work, where gaming websites are often restricted? That’s where OVO Unblocked comes in. Let’s dive into why this version of the game is so popular and how you can access it.</p>
+    <p>Are you a fan of fast-paced platformer games? The <strong>OvO Game</strong> is the perfect game for you. With its sleek design, smooth mechanics, and challenging levels, this game has captured the hearts of players everywhere. But what if you want to play it at school or work, where gaming websites are often restricted? That’s where OVO Unblocked comes in. Let’s dive into why this version of the game is so popular and how you can access it.</p>
 
     <h2>What is OVO Unblocked?</h2>&nbsp;
     <p>OVO Unblocked is a minimalist platformer game where the main objective is to guide a small, nimble character through tricky, obstacle-filled levels. The gameplay is focused on speed and precision, requiring players to make quick decisions and perfectly timed jumps. The simple controls—just jumping and moving—make it easy to pick up, but the increasingly difficult levels ensure that even seasoned gamers will find a challenge.</p>
