--- a/game/ovo.html
+++ b/game/ovo.html
@@ -777,8 +777,8 @@
         <li><strong>Use the Basic Controls:</strong> The controls are straightforward. Move your character with arrow keys and jump with a single button. The goal is to navigate the platforming obstacles as quickly as possible.</li>
     </ol>
 
-    <h2>What Makes OVO Classic So Addictive?</h2>&nbsp;
-    <p>OVO Classic is the kind of game that keeps you coming back for "just one more try." Here’s what makes it stand out:</p>
+    <h2>What Makes OVO game So Addictive?</h2>&nbsp;
+    <p>OVO game is the kind of game that keeps you coming back for "just one more try." Here’s what makes it stand out:</p>
     <ul>
         <li><strong>Precision Gameplay:</strong> Every jump and movement in OVO requires perfect timing. This gives the game a unique rhythm that feels satisfying when you get it right.</li>&nbsp;
         <li><strong>Increasing Difficulty:</strong> As you progress, the levels get harder, introducing new challenges that test your reflexes and problem-solving skills.</li>&nbsp;
@@ -786,14 +786,14 @@
     </ul>
 
     <h2>Why OVO Unblocked is Perfect for School and Work</h2>&nbsp;
-    <p>OVO Unblocked isn’t just fun—it’s also perfect for quick gaming sessions during your free time at school or work. Here’s why:</p>
+    <p>OVO Unblocked is not just fun, it is also perfect for quick gaming sessions during your free time at school or work. Here is why:</p>
     <ul>
         <li><strong>Quick Gameplay:</strong> Most levels in OvO Unblocked can be completed in just a few minutes, making it ideal for short breaks.</li>&nbsp;
         <li><strong>No Distractions:</strong> The game’s minimalist style and focus on precision make it easy to play without getting too absorbed. You can quickly start and stop without feeling like you’re missing out.</li>&nbsp;
         <li><strong>Accessible on Multiple Devices:</strong> Whether you're on a school computer or using a work laptop, OVO Unblocked works seamlessly in any browser.</li>
     </ul>
 
-    <h2>Tips to Succeed in OVO Classic</h2>&nbsp;
+    <h2>Tips to Succeed in OVO Unblocked</h2>&nbsp;
     <p>To master OVO Classic, you’ll need patience and practice. Here are a few tips to help you get started:</p>
     <ul>
         <li><strong>Perfect Your Timing:</strong> The key to success in OVO is timing. Make sure your jumps are well-timed, especially when you face fast-moving obstacles.</li>&nbsp;
