--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -155,6 +155,21 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                 <div class="col-12">
                     <div class="games-masonary">
                         <div class="clearfix gamesContainer">
+				  <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/football-bros.html">
+				                <img src="assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="./game/football-bros.html">Football Bros</a></h2>
+				            <p class="game-meta">Puzzle | Desktop | Mobile</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
 				<!-- start game item -->
                                      <div class="games-item desktop">
         <div class="games-single-item img-contain-isotope">
