--- a/io-games/index.html
+++ b/io-games/index.html
@@ -191,6 +191,21 @@ If you want to play io games online for free, without signing up or downloading 
         </div>
     </div>
     <!-- end game item -->
+				  <!-- start game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/football-bros.html">
+				                <img src="assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="./game/football-bros.html">Football Bros</a></h2>
+				            <p class="game-meta">Puzzle | Desktop | Mobile</p>
+				        </div>
+				    </div>
+				</div>
+				<!-- end game item -->
 				<!-- start game item -->
 				 <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
