--- a/io-games/index.html
+++ b/io-games/index.html
@@ -196,7 +196,7 @@ If you want to play io games online for free, without signing up or downloading 
 				    <div class="games-single-item img-contain-isotope">
 				        <div class="games-thumb">
 				            <a href="/game/football-bros.html">
-				                <img src="assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
+				                <img src="https://faf-games.github.io/assets/img/football-bros/football-bros.webp" alt="Football Bros" title="Football Bros" />
 				            </a>
 				        </div>
 				        <div class="games-desc">
