--- a/index.html
+++ b/index.html
@@ -307,11 +307,24 @@
 				        </div>
 				        <div class="games-desc">
 				            <h2><a href="./game/football-bros.html">Football Bros</a></h2>
-				            <p class="game-meta">Puzzle | Desktop | Mobile</p>
+				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
 				        </div>
 				    </div>
 				</div>
 				<!-- end game item -->
+				       <div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/basketball-bros.html">
+				                <img src="assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="./game/basketball-bros.html">Football Bros</a></h2>
+				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
 				
 		                <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
