--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 				            </a>
 				        </div>
 				        <div class="games-desc">
-				            <h2><a href="./game/basketball-bros.html">Football Bros</a></h2>
+				            <h2><a href="./game/basketball-bros.html">Basketball Bros</a></h2>
 				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
 				        </div>
 				    </div>
