--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -214,6 +214,19 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                                 </div>
                             </div>
                             <!-- end game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="/game/basketball-bros.html">
+				                <img src="assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="/game/basketball-bros.html">Basketball Bros</a></h2>
+				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
 
 <div class="games-item desktop">
     <div class="games-single-item img-contain-isotope">
