--- a/io-games/index.html
+++ b/io-games/index.html
@@ -191,6 +191,19 @@ If you want to play io games online for free, without signing up or downloading 
         </div>
     </div>
     <!-- end game item -->
+				<div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="/game/basketball-bros.html">
+				                <img src="assets/img/basketball-bros/basketball-bros.webp" alt="Basketball Bros" title="Basketball Bros" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="/game/basketball-bros.html">Basketball Bros</a></h2>
+				            <p class="game-meta">Sport | Desktop | 2 Player games</p>
+				        </div>
+				    </div>
+				</div>
 				  <!-- start game item -->
 				<div class="games-item desktop">
 				    <div class="games-single-item img-contain-isotope">
