--- a/index.html
+++ b/index.html
@@ -1054,6 +1054,10 @@
 
                         </div>
 		    </div>
+					  <div class="banner-ad-wrapper"><div class="banner-ad-content" style="padding: 20px; text-align: center;">
+<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script> <script>   window.googletag = window.googletag || { cmd: [] }; var anchorSlot; googletag.cmd.push(function () { anchorSlot = googletag.defineOutOfPageSlot('/21849154601,23079347111/Ad.Plus-Anchor', googletag.enums.OutOfPageFormat.BOTTOM_ANCHOR); anchorSlot.addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices(); googletag.display(anchorSlot);  }); setInterval(function(){googletag.pubads().refresh([anchorSlot]);}, 30000);  </script>
+						  </div>
+						  </div>
 
 
 	<h2 class="section-title">Not Working? Try Other Servers:</h2>
