--- a/stats.html
+++ b/stats.html
@@ -24,6 +24,7 @@
         <li>basket-and-ball.html</li>
         <li>basket-random.html</li>
         <li>basketball-legends-2020.html</li>
+        <li>basketball-bros.html</li>
         <li>basketball-stars.html</li>
         <li>big-tower-tiny-square.html</li>
         <li>bike-trials-winter-2.html</li>
@@ -73,6 +74,7 @@
         <li>escaping-the-prison.html</li>
         <li>extreme-car-parking.html</li>
         <li>extreme-pamplona.html</li>
+        <li>football-bros.html</li>
         <li>fire-truck-rescue.html</li>
         <li>fire-truck.html</li>
         <li>fireboy-and-watergirl-2.html</li>
