--- a/game/crazy-cattle-3d.html
+++ b/game/crazy-cattle-3d.html
@@ -863,7 +863,7 @@
          <script>
             function loadMainGame()
             {
-                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://faf-games.github.io/f/cattle3d" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
+                  var html = `<iframe class="game-iframe iframeloader" id="game-area" src="https://korenscript.github.io/cattle3d/" width="480" height="800" scrolling="none" frameborder="0" allowfullscreen="" tabindex="0"></iframe>`;
                   document.getElementById("loadgame").innerHTML = html;
                   document.getElementById('loadgame').scrollIntoView();
             }
