--- a/index.html
+++ b/index.html
@@ -326,6 +326,19 @@
 				        </div>
 				    </div>
 				</div>
+				       				       <div class="games-item desktop">
+				    <div class="games-single-item img-contain-isotope">
+				        <div class="games-thumb">
+				            <a href="./game/crazy-cattle-3d.html">
+				                <img src="assets/img/crazycattle3d/crazy-cattle-3d.webp" alt="Crazy Cattle 3D" title="Crazy Cattle 3D" />
+				            </a>
+				        </div>
+				        <div class="games-desc">
+				            <h2><a href="./game/crazy-cattle-3d.html">Crazy Cattle 3D</a></h2>
+				            <p class="game-meta">Sport | Desktop | Racing</p>
+				        </div>
+				    </div>
+				</div>
 				
 		                <div class="games-item desktop">
                                 <div class="games-single-item img-contain-isotope">
