--- a/game/crazy-cattle-3d.html
+++ b/game/crazy-cattle-3d.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Crazy Cattle 3D: Play Now for Free on FAF Games</title>
-    <meta name="description" content="eParkour is a thrilling platform game where you jump, dodge, and race through challenging levels. Can you conquer every obstacle and reach the finish line?">
-    <meta name="keywords" content="crazy cattle 3d, crazy cattle 3d game, platform game, crazy cattle 3d game, crazy cattle 3d, crazy cattle 3d skill game, 3D parkour, action game, adventure game, puzzle platformer, speedrun game, parkour challenge, reflex game, free running, extreme parkour, gaming challenge, fun platformer, level-based game, online parkour, fast-paced game">
+        <meta name="description" content="Play Crazy Cattle 3D – a wild and hilarious 3D action game where you control rampaging cattle, cause chaos in towns, and complete fun-packed missions. Get ready for bovine mayhem!">
+        <meta name="keywords" content="CrazyCattle3D, unblocked games, online 3D games, crazy cow game, funny animal games, free browser games, action games online, 3D animal simulator, play games at school, crazy cattle unblocked">
 
         <meta name="news_keywords" content="">
         <meta name="author" content="FAF Games Team">
