--- a/game/crazy-cattle-3d.html
+++ b/game/crazy-cattle-3d.html
@@ -280,6 +280,40 @@
                 margin-bottom: 30px;
                 margin-top: 20px
             }
+		{
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: #fff;
+            margin: 20px;
+        }
+        .container {
+            margin: auto;
+        }
+        .box {
+            background-color: #1e1e1e;
+            padding: 15px;
+            border-radius: 8px;
+            margin-bottom: 10px;
+        }
+        h2 {
+            color: #fff;
+            border-bottom: 2px solid #555;
+            padding-bottom: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            margin: 5px 0;
+        }
+        a {
+            color: #4da6ff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
             
         </style>
 
@@ -413,6 +447,40 @@
           <section class="fag-games-area related_games section_100">
              <div class="container">
                 <div class="row">
+<div class="container">
+	        <!-- About Section -->
+        <div class="box">
+		<h2>Crazy Cattle 3D – A Wild Ride Into the Moo-dness!</h2>
+
+  <p>Get ready to lasso some laughs and go hoof-first into the chaos of <strong>Crazy Cattle 3D</strong>! Whether you're into fast-paced animal adventures or just in the mood for something hilariously unpredictable, this game’s got it all. Let’s break it down for you.</p>
+
+  <h2>What is Crazy Cattle 3D?</h2>
+  <p><strong>Crazy Cattle 3D</strong> is a fun-packed browser game where you take control of a wild cow on a mission to cause mayhem. You charge through fields, dodge obstacles, and aim to rack up the highest score possible. It’s simple, silly, and seriously addictive.</p>
+
+  <p>This game can often be found under different links like:</p>
+  <ul>
+    <li>Crazy Cattle 3D GitHub</li>
+    <li>Crazy Cattle 3D GitHub.io</li>
+    <li>Crazy Cattle 3D Unblocked</li>
+  </ul>
+
+  <p>That last one? Perfect if you’re trying to sneak in some fun at school or work!</p>
+
+  <h2>How to Play</h2>
+  <ul>
+    <li><strong>Start the Game</strong> – Visit a site like <em>crazy cattle 3d github io</em> or search for <em>crazy cattle 3d unblocked</em> to get started instantly.</li>
+    <li><strong>Use the Controls</strong> – Usually, it’s just your arrow keys or WASD to move. Simple as pie.</li>
+    <li><strong>Avoid Obstacles</strong> – From fences to farmers, keep your eyes peeled.</li>
+    <li><strong>Cause Chaos</strong> – Run into objects, launch them flying, and earn points.</li>
+    <li><strong>Set High Scores</strong> – The longer you survive, the wilder it gets!</li>
+  </ul>
+
+  <h2>Who Developed Crazy Cattle 3D?</h2>
+  <p><strong>Crazy Cattle 3D</strong> was developed by indie game developer <strong>Anna Mayberry</strong>, also known by her online handle <strong>@4nn4t4t</strong>. The game was released on April 12, 2025, and has gained popularity for its chaotic, physics-based battle royale gameplay featuring explosive sheep.</p>
+
+  <h2>Who Owns Crazy Cattle 3D?</h2>
+  <p>The game is associated with <strong>crazycattle-3d.io LLC</strong>, a company based in Great Neck, New York. This organization manages the game's official website and social media presence, including platforms like GitHub, X (formerly Twitter), and Reddit.</p>
+			
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
