--- a/game/crazy-cattle-3d.html
+++ b/game/crazy-cattle-3d.html
@@ -478,9 +478,8 @@
   <h2>Who Developed Crazy Cattle 3D?</h2>
   <p><strong>Crazy Cattle 3D</strong> was developed by indie game developer <strong>Anna Mayberry</strong>, also known by her online handle <strong>@4nn4t4t</strong>. The game was released on April 12, 2025, and has gained popularity for its chaotic, physics-based battle royale gameplay featuring explosive sheep.</p>
 
-  <h2>Who Owns Crazy Cattle 3D?</h2>
-  <p>The game is associated with <strong>crazycattle-3d.io LLC</strong>, a company based in Great Neck, New York. This organization manages the game's official website and social media presence, including platforms like GitHub, X (formerly Twitter), and Reddit.</p>
-			
+			</div>
+	</div>
                    <div class="col-12">
                       <div class="site-heading">
                          <h2 class="heading_animation">Related <span>games</span></h2>
