--- a/game/crazy-cattle-3d.html
+++ b/game/crazy-cattle-3d.html
@@ -465,7 +465,7 @@
   </ul>
 
   <p>That last one? Perfect if you’re trying to sneak in some fun at school or work!</p>
-
+ <div class="box">
   <h2>How to Play</h2>
   <ul>
     <li><strong>Start the Game</strong> – Visit a site like <em>crazy cattle 3d github io</em> or search for <em>crazy cattle 3d unblocked</em> to get started instantly.</li>
@@ -474,7 +474,7 @@
     <li><strong>Cause Chaos</strong> – Run into objects, launch them flying, and earn points.</li>
     <li><strong>Set High Scores</strong> – The longer you survive, the wilder it gets!</li>
   </ul>
-
+</div>
   <h2>Who Developed Crazy Cattle 3D?</h2>
   <p><strong>Crazy Cattle 3D</strong> was developed by indie game developer <strong>Anna Mayberry</strong>, also known by her online handle <strong>@4nn4t4t</strong>. The game was released on April 12, 2025, and has gained popularity for its chaotic, physics-based battle royale gameplay featuring explosive sheep.</p>
 
