--- a/index.html
+++ b/index.html
@@ -1307,12 +1307,12 @@
                             <h3>Contact Us</h3>
                           <div class="footer-contact">
     <h4 class="title"><i class="fa fa-envelope"></i> Email Address</h4>
-    <p><a href="mailto:junaidsitenative@gmail.com">benhanry542@gmail.com</a></p>
+    <p><a href="mailto:junaidsitenative@gmail.com">georagesmith@gmail.com</a></p>
 </div>
 
 <div class="footer-contact">
     <h4 class="title"><i class="fab fa-whatsapp"></i> Whatsapp</h4>
-    <p><a href="https://wa.me/17739434269" target="_blank">17739434269</a></p>
+    <p><a href="https://wa.me/447386443403" target="_blank">447386443403</a></p>
 </div>
 <script data-cfasync="false" async src="//cdn.intergient.com/1025408/75283/ramp.js"></script>
                         </div>
@@ -1332,13 +1332,13 @@
                             </div>
                             <div class="footer-social">
                                 <p>
-					<p>Wants to advertise on our Website? <a href="https://wa.me/17739434269" target="_blank">Contact us</a>!</p>
+					<p>Wants to advertise on our Website? <a href="https://wa.me/447386443403" target="_blank">Contact us</a>!</p>
 
 				</p>
                             </div>
                             <div class="copyright">
                                 <p>&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
-				    <p>Powered by <a href="https://linktr.ee/sitenative" target="_blank" rel="noopener"><b>SiteNative ❤️ </b></a></p>
+				    <p>Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
                     </div>
