--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Title -->
     <title>Play Unblocked Games | Unblocked Games Premium</title>
 	<meta name="publisher" content="FAF Games Team">
-	<link rel="canonical" href="https://faf-games.github.io/">
+	<link rel="canonical" href="https://fafgames-2025.github.io/">
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -53,8 +53,8 @@
   "@context": "https://schema.org",
   "@type": "VideoGame",
   "name": "FAF Games",
-  "url": "https://faf-games.github.io/index.html",
-  "image": "https://faf-games.github.io/assets/img/logo.png",
+  "url": "https://fafgames-2025.github.io/index.html",
+  "image": "https://fafgames-2025.github.io/assets/img/logo.png",
   "description": "Unblocked Games Premium: Enjoy lots of Unblocked Games that you can play anywhere, like school or work. Easy to start, no need to download, with many games to choose from.",
   "genre": ["Racing","Car","Acting", "Advanture", "Bike","Shooting", "Skill", "Idle","Sports", "Simulation"],
   "publisher": {
@@ -72,7 +72,7 @@
 
 
 
-<link rel="manifest" href="https://faf-games.github.io/manifest.json">
+<link rel="manifest" href="https://fafgames-2025.github.io/manifest.json">
 
 
 	
@@ -1134,17 +1134,17 @@
     <p>Looking for the best unblocked games to play on FAF Games, here is a list of the top 12 most popular Unblocked games premium that will keep you entertained:</p>
     
     <ol>
-        <li><a href="https://faf-games.github.io/game/drift-hunters.html" target="_blank">Drift Hunters</a> – A wild driving game where you navigate through tricky courses filled with obstacles, requiring careful balance and speed to avoid crashes and reach the finish line.</li><br>
-        <li><a href="https://faf-games.github.io/game/drift-boss.html" target="_blank">Drift Boss</a> – A fast-paced drifting game where you must master sharp turns and tricky roads to keep your car from falling off the edge, all while racking up points for stylish drifts.</li><br>
-        <li><a href="https://faf-games.github.io/game/1v1-lol.html" target="_blank">1v1.lol</a> – A fast-paced shooter where you can test your skills against other players in real-time.</li><br>
-        <li><a href="https://faf-games.github.io/game/just-fall.html" target="_blank">Just Fall.io</a> – Join a wacky, fun battle royale as cute penguins and race to be the last one standing.</li><br>
-        <li><a href="https://faf-games.github.io/game/tunnel-rush.html" target="_blank">Tunnel Rush</a> – Navigate a fast-moving tunnel full of colorful obstacles. A test of reflexes and focus!</li><br>
-        <li><a href="https://faf-games.github.io/game/shell-shockers.html" target="_blank">Shell Shockers</a> – A unique egg-themed shooter where you battle other eggs with powerful weapons.</li><br>
-        <li><a href="https://faf-games.github.io/game/bitlife.html" target="_blank">BitLife</a> – A life simulation game where you make key choices that shape your character's journey through various life events, from childhood to adulthood, all in a detailed text-based world.</li><br>
-        <li><a href="https://faf-games.github.io/game/basketball-stars.html" target="_blank">Basketball Stars</a> – Show off your basketball skills in this fun sports game that lets you play with friends.</li><br>
-        <li><a href="https://faf-games.github.io/game/slope.html" target="_blank">Slope</a> – Control a ball as it speeds down a treacherous slope, dodging obstacles and trying not to fall off.</li><br>
-        <li><a href="https://faf-games.github.io/game/moto-x3m-bike-race.html" target="_blank">Moto X3M</a> – Race your bike through crazy obstacle courses, performing stunts and tricks as you go.</li><br>
-        <li><a href="https://faf-games.github.io/game/among-us.html" target="_blank">Among Us Online</a> – Play the popular social deduction game where you try to figure out who the imposter is among your crew.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/drift-hunters.html" target="_blank">Drift Hunters</a> – A wild driving game where you navigate through tricky courses filled with obstacles, requiring careful balance and speed to avoid crashes and reach the finish line.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/drift-boss.html" target="_blank">Drift Boss</a> – A fast-paced drifting game where you must master sharp turns and tricky roads to keep your car from falling off the edge, all while racking up points for stylish drifts.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/1v1-lol.html" target="_blank">1v1.lol</a> – A fast-paced shooter where you can test your skills against other players in real-time.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/just-fall.html" target="_blank">Just Fall.io</a> – Join a wacky, fun battle royale as cute penguins and race to be the last one standing.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/tunnel-rush.html" target="_blank">Tunnel Rush</a> – Navigate a fast-moving tunnel full of colorful obstacles. A test of reflexes and focus!</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/shell-shockers.html" target="_blank">Shell Shockers</a> – A unique egg-themed shooter where you battle other eggs with powerful weapons.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/bitlife.html" target="_blank">BitLife</a> – A life simulation game where you make key choices that shape your character's journey through various life events, from childhood to adulthood, all in a detailed text-based world.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/basketball-stars.html" target="_blank">Basketball Stars</a> – Show off your basketball skills in this fun sports game that lets you play with friends.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/slope.html" target="_blank">Slope</a> – Control a ball as it speeds down a treacherous slope, dodging obstacles and trying not to fall off.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/moto-x3m-bike-race.html" target="_blank">Moto X3M</a> – Race your bike through crazy obstacle courses, performing stunts and tricks as you go.</li><br>
+        <li><a href="https://fafgames-2025.github.io/game/among-us.html" target="_blank">Among Us Online</a> – Play the popular social deduction game where you try to figure out who the imposter is among your crew.</li><br>
     </ol>
     
     <h2>How to Get Started with Unblocked Games 6x on FAF Games</h2>
@@ -1184,7 +1184,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="single-footer">
                             <h3>About us</h3>
-                <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://faf-games.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p>Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://fafgames-2025.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
                         </div>
                     </div>
 
