--- a/index.html
+++ b/index.html
@@ -1223,7 +1223,7 @@
                             <h3>Contact Us</h3>
                           <div class="footer-contact">
     <h4 class="title"><i class="fa fa-envelope"></i> Email Address</h4>
-    <p><a href="mailto:junaidsitenative@gmail.com">georagesmith@gmail.com</a></p>
+    <p><a href="mailto:berofen697@inkight.com">georagesmith@gmail.com</a></p>
 </div>
 
 <div class="footer-contact">
