--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Unblocked Games Premium: Play a wide range of Unblocked Games that you can play anywhere, like school or work. Easy to start, no need to download, with many games to choose from.">
-    <meta name="keywords" content="FAF Games, unblocked games, unblocked games premium, online games, free games, play games online, school games, browser games, free to play games, no download games, adventure games, car games, racing games, action games, puzzle games, multiplayer games, educational games">
+    <meta name="description" content="Unblocked Games Premium:  are free online games that work on school or office networks. No installs, no blocks—just instant fun anytime you want!">
+    <meta name="keywords" content="FAF Games, unblocked games, unblocked games premium, are online games that can be played on restricted networks like schools or offices. They bypass filters, allowing quick, browser-based fun without downloads or logins. Perfect for a break anytime!">
     <meta name="author" content="FAF Games Team">
     <!-- Title -->
     <title>Play Unblocked Games | Unblocked Games Premium</title>
