--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
     <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
+		<meta name="google-site-verification" content="Fuu6YqTCY6otSESYHv_IteY1RvOGv4vPknuEqRSJWTk" />
            
             <a class="navbar-brand" href="index.html"><img src="assets/img/logo.png" alt="site logo" /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
