--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
   window.ramp = window.ramp || {};
   window.ramp.que = window.ramp.que || [];
 </script>
+
+	<meta name="google-site-verification" content="Fuu6YqTCY6otSESYHv_IteY1RvOGv4vPknuEqRSJWTk" />
 </head>
     
 
