--- a/index.html
+++ b/index.html
@@ -173,6 +173,15 @@
 </script>
 
 	<meta name="google-site-verification" content="Fuu6YqTCY6otSESYHv_IteY1RvOGv4vPknuEqRSJWTk" />
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6BJMQNQ0YV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6BJMQNQ0YV');
+</script>
 </head>
     
 
