--- a/game/1v1-lol.html
+++ b/game/1v1-lol.html
@@ -5,14 +5,14 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>1v1.lol Unblocked: Play Now for Free on FAF Games</title>
+        <title>1v1.lol Unblocked: Play Now for Free on 76 Unblocked Games</title>
         <meta name="description" content="Play 1v1.lol Unblocked, a competitive third-person shooter. Build strategically in modes like battle royale, box fight, and zone wars. Be the last player standing!">
         <meta name="title" content="1v1 LOL Unblocked">
         <meta name="keywords" content="1v1 lol unblocked, 1v1 sites, 1v1unblocked, lol.1v1 unblocked, 1v1 lol sites, 1v1. lol unblocked, 1vs1 lol unblocked, v1.lol unblocked google sites, 1v1 lol google sites, lol 1v1 unblocked, 1v1 lol unblocked 66, 1v1 lol unblocked games, 1v1lol unblocked, 1v1 unblocked, 1v1.lol unblocked games, 1v1.unblocked, https //1v1.lol unblocked, 1v1.lol unblocked 77, 1v1lolunblocked, 1v1 tennis unblocked, 1v1 sites">
         <meta name="news_keywords" content="1v1.lol unblocked, 1v1 lol 66, 1v1 lol Unblocked Games, 1v1.lol hacks, 1v1.lol alternative, 1v1 lol 76, 1v1 lol unblocked 911, 1v1.lol aimbot, 1v1 lol poki, 1v1.lol Unblocked, 1v1 Unblocked ">
-        <meta name="author" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
         <link rel="canonical" href="/game/1v1-lol.html" />
-	<meta name="publisher" content="FAF Games Team">
+	<meta name="publisher" content="76 Unblocked Games">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -294,37 +294,7 @@
 </script>
 
 
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "VideoGame",
-  "name": "1v1.lol",
-  "description": "Play 1v1.lol Unblocked, a competitive third-person shooter. Build strategically in modes like battle royale, box fight, and zone wars. Be the last player standing! Play single-player or multiplayer modes.",
-  "genre": ["Shooter", "Battle Royale", "Strategy"],
-  "publisher": {
-    "@type": "Organization",
-    "name": "FAF Games Team"
-  },
-	"image": "https://faf-games.github.io/assets/img/1v1.lol/1v1-lol.jpg",
-  "operatingSystem": "Any web browser",
-  "applicationCategory": "Game",
-  "aggregateRating": {
-    "@type": "AggregateRating",
-    "ratingValue": 4.8,
-    "bestRating": 5,
-    "reviewCount": 1200
-  },
-  "offers": {
-    "@type": "Offer",
-    "price": "0",
-    "priceCurrency": "USD"
-  },
-  "author": {
-    "@type": "Organization",
-    "name": "FAF Games Team"
-  }
-}
-</script>
+
 	<script async src="https://securepubads.g.doubleclick.net/tag/js/gpt.js"></script> <script>   window.googletag = window.googletag || {cmd: []}; googletag.cmd.push(function() { var interstitialSlot = googletag.defineOutOfPageSlot('/21849154601,23079347111/Ad.Plus-Interstitial', googletag.enums.OutOfPageFormat.INTERSTITIAL);  if (interstitialSlot) interstitialSlot.addService(googletag.pubads()); googletag.pubads().enableSingleRequest(); googletag.enableServices();   googletag.display(interstitialSlot);     }); </script>
     <script async src="https://fundingchoicesmessages.google.com/i/pub-9427048641572074?ers=1" nonce="7M3TLdpr6ws84KtZqprB7Q"></script><script nonce="7M3TLdpr6ws84KtZqprB7Q">(function() {function signalGooglefcPresent() {if (!window.frames['googlefcPresent']) {if (document.body) {const iframe = document.createElement('iframe'); iframe.style = 'width: 0; height: 0; border: none; z-index: -1000; left: -1000px; top: -1000px;'; iframe.style.display = 'none'; iframe.name = 'googlefcPresent'; document.body.appendChild(iframe);} else {setTimeout(signalGooglefcPresent, 0);}}}signalGooglefcPresent();})();</script>
                     
@@ -350,13 +320,13 @@
             <a href="https://docs.google.com/document/d/1sgC0ADkCZnb6yViUYuqt1zyR7gdERMFJovSb_svO4VU/edit?usp=sharing" target="_blank" rel="noopener noreferrer class="nav-link">Alt Links</a>
         </li>
         <li class="nav-item active">
-            <a href="https://faf-games.github.io/index.html" class="nav-link">Home</a>
+            <a href="https://76-unblockedgames.github.io/index.html" class="nav-link">Home</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/action/index.html" class="nav-link">Action</a>
+            <a href="https://76-unblockedgames.github.io/action/index.html" class="nav-link">Action</a>
         </li>
         <li class="nav-item">
-            <a href="https://faf-games.github.io/adventure/index.html" class="nav-link">Adventure</a>
+            <a href="https://76-unblockedgames.github.io/adventure/index.html" class="nav-link">Adventure</a>
         </li>
         <li class="nav-item">
             <a href="https://faf-games.github.io/bike/index.html" class="nav-link">Bike</a>
